# qt_projects

./: .gitignore  README.md
ffmpeg_player/: CMakeLists.txt
ffmpeg_player/app/: CMakeLists.txt  abstract_video_decoder.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_decoder_inner.cpp  ffmpeg_decoder_inner.h  ffmpeg_frame.cpp  ffmpeg_frame.h  ffmpeg_utils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  media_player.cpp  media_player.h  pcm_play_device.cpp  pcm_play_device.h  video_disp_widget.cpp  video_disp_widget.h  videodisplayer.cpp  videodisplayer.h
xAnnotation/: CMakeLists.txt
xAnnotation/app/: CMakeLists.txt  label_abstract_item.cpp  label_abstract_item.h  label_control_point.cpp  label_control_point.h  label_item_poly.cpp  label_item_poly.h  label_item_rect.cpp  label_item_rect.h  label_view.cpp  label_view.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
xAnnotation/cargauge_qml_proj/Cargauge/: Cargauge.qmlproject  Cargauge.qmlproject.qtds
xAnnotation/cargauge_qml_proj/Cargauge/Cargauge/: Constants.qml  qmldir
xAnnotation/cargauge_qml_proj/Cargauge/Cargauge/designer/: plugin.metainfo
xAnnotation/cargauge_qml_proj/Cargauge/CargaugeContent/: App.qml  CustomDot.qml  ProgressCircle.qml  Rpm_gauge.ui.qml  Screen01.ui.qml  Speed_gauge.ui.qml  Speed_gauge_bak.ui.qml
xAnnotation/design_files/: QML与C++混合编程.md  uml.uxf  网络资料.md
xAnnotation/design_files/仪表盘图形设计文件/: 速度表.xcf
